--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-native": "^0.66.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
