--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-fontawesome": "^1.7.1",
     "react-native": "^0.66.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^4.3.1",
