--- a/package.json
+++ b/package.json
@@ -5,23 +5,36 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "lodash": "^4.17.21",
+    "history": "^5.0.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-fontawesome": "^1.7.1",
-    "react-native": "^0.66.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0"
+    "popper.js": "^1.16.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-scripts": "next",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
