--- a/package.json
+++ b/package.json
@@ -1,29 +1,53 @@
 {
-  "name": "react-tutorial",
-  "version": "0.1.0",
+  "name": "movie-dbnpm-arsen",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.17",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "history": "^5.0.0",
-    "jquery": "^3.6.0",
+    "history": "^5.1.0",
     "moment": "^2.29.1",
-    "popper.js": "^1.16.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-normalize": "^10.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-bootstrap": "^2.0.3",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "next",
-    "styled-components": "^5.1.1"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.8",
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "warn",
+        {
+          "argsIgnorePattern": "^_",
+          "varsIgnorePattern": "^_",
+          "caughtErrorsIgnorePattern": "^_"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
